docs: fix Trailing whitespace in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>CV. Now - is empty page. But It's enough for this is task.</h1>
-    <h3>/*************************description************************/</h3>    
+    <h3>*************************description************************</h3>
 </body>
 </html>
