feat: begin edit CV html layout

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CV. Now - is empty page. But It's enough for this is task.</title>
+    <title>CV-html:Sadovnikov.E.S.</title>
 </head>
 <body>
-    <h1>CV. Now - is empty page. But It's enough for this is task.</h1>
-    <h3>*************************description************************</h3>
+  <div class="wrapper">
+    <header>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
+  </div>
 </body>
 </html>
