feat: edit CV html layout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <header>
     </header>
     <main>
+      <div class="main_im"></div>
+      <div class="main_my_contacts"></div>
+      <div class="main_my_expirience"></div>
+      <div class="main_my_code"></div>
+      <div class="main_my_portfolio"></div>
+      <div class="main_my_education_english"></div>
     </main>
     <footer>
     </footer>
