feat: edit CV html layout and css

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <title>CV-html:Sadovnikov.E.S.</title>
 </head>
 <body>
-  <div class="wrapper">
-    <header>
-    </header>
-    <main>
-      <div class="main_im"></div>
-      <div class="main_my_contacts"></div>
-      <div class="main_my_expirience"></div>
-      <div class="main_my_code"></div>
-      <div class="main_my_portfolio"></div>
-      <div class="main_my_education_english"></div>
-    </main>
-    <footer>
-    </footer>
-  </div>
+  <header class="header">
+    <nav class="header_navigation">header_navigation</nav>
+    <section class="header_logo wrapper">header_logo wrapper</section>
+  </header>
+  <main class="main wrapper">main wrapper
+    <section class="main_im"></section>
+    <section class="main_my_contacts"></section>
+    <section class="main_my_expirience"></section>
+    <section class="main_my_code"></section>
+    <section class="main_my_portfolio"></section>
+    <section class="main_my_education_english"></section>
+  </main>
+  <footer class="footer wrapper">footer wrapper</footer>
 </body>
 </html>
