feat: header realizes

--- a/index.html
+++ b/index.html
@@ -5,21 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CV-html:Sadovnikov.E.S.</title>
+    <title>CV-html:Sadovnikov E.S.</title>
 </head>
 <body>
-  <header class="header">
-    <nav class="header_navigation">header_navigation</nav>
-    <section class="header_logo wrapper">header_logo wrapper</section>
+  <header class="header" id="top">
+    <nav class="header_navigation">
+      <a href="#contacts">Contacts </a>
+      <a href="#skills">Skills </a>
+      <a href="#portfolio">Portfolio </a>
+      <a href="#education">Education</a>
+    </nav>
+    <section class="header_logo wrapper">
+      <img class="img" src="avatar.png" alt="Avatar.png">
+      <h1 class="h1">Sadovnikov Eugen</h1>
+    </section>
   </header>
   <main class="main wrapper">main wrapper
     <section class="main_im"></section>
-    <section class="main_my_contacts"></section>
-    <section class="main_my_expirience"></section>
+    <section class="main_my_contacts" id="contacts"></section>
+    <section class="main_my_expirience" id="skills"></section>
     <section class="main_my_code"></section>
-    <section class="main_my_portfolio"></section>
-    <section class="main_my_education_english"></section>
+    <section class="main_my_portfolio" id="portfolio"></section>
+    <section class="main_my_education_english" id="education"></section>
   </main>
-  <footer class="footer wrapper">footer wrapper</footer>
+  <footer class="footer">
+    <div class="footer_link_github">
+      <a >
+    </div>
+    <div class="footer_link_cource">
+    </div>
+  </footer>
 </body>
 </html>
