feat: contact realizes

--- a/index.html
+++ b/index.html
@@ -10,21 +10,43 @@
 <body>
   <header class="header" id="top">
     <nav class="header_navigation">
-      <a href="#contacts">Contacts </a>
-      <a href="#skills">Skills </a>
-      <a href="#portfolio">Portfolio </a>
-      <a href="#education">Education</a>
+      <a class="nav_item" href="#contacts">Contacts </a>
+      <a class="nav_item" href="#skills">Skills </a>
+      <a class="nav_item" href="#portfolio">Portfolio </a>
+      <a class="nav_item" href="#education">Education</a>
     </nav>
     <section class="header_logo wrapper">
       <img class="img" src="avatar.png" alt="Avatar.png">
       <h1 class="h1">Sadovnikov Eugen</h1>
     </section>
   </header>
-  <main class="main wrapper">main wrapper
-    <section class="main_im"></section>
-    <section class="main_my_contacts" id="contacts"></section>
-    <section class="main_my_expirience" id="skills"></section>
-    <section class="main_my_code"></section>
+  <main class="main wrapper">
+    <section class="main_im">
+      <h2 class="h2">About me</h2>
+      <p class="p">Hello! I have been working as an "Anykey" for 18 years. I am a software-engineer by my education. But the actual experience in this field of work is not big. That is why, I had to do a many different kinds of work without going deep: web development on SMS joomla, 1C programmer, repair computers, office equipment, configure of local network.</p>
+      <p class="p">This was the specifics of my work two years ago - many areas of work, but not going far. But the last two years I work with interest project of Automation production in mechanical engineering in the development environment 1С-enterprise.</p>
+      <p class="p">Now I want to expand this project through additional development - a web service for exchanging information with 1C-enterprise.</p>
+      <p class="p">Knowing a little of the backend with PHP+SQL, I decided to get experience of frontend in this course.</p>
+    </section>
+    <section class="main_my_contacts" id="contacts">
+      <h2 class="h2">Contacts</h2>
+      <ul class="list_item">
+        <li class="item">Location: Lida, Belarus</li>
+        <li class="item">Tel: +375292833718</li>
+        <li class="item">Telegram: @Eugen270181</li>
+        <li class="item">e-mail: sadeugen@gmail.com</li>
+        <li class="item">Discord: Eugen#4582</li>
+        <li class="item">
+          <a href="https://github.com/Eugen270181">[Github](https://github.com/Eugen270181)</a>
+        </li>
+      </ul>
+    </section>
+    <section class="main_my_expirience" id="skills">
+      
+    </section>
+    <section class="main_my_code">
+    
+    </section>
     <section class="main_my_portfolio" id="portfolio"></section>
     <section class="main_my_education_english" id="education"></section>
   </main>
