fix: fix css and html with validation

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="nav_footer" href="https://rs.school/js/">
-    <img src="rs_school_js.svg" alt="RS_JS_Stage0" height="26px">
-    </a>
+    <a class="nav_footer" href="https://rs.school/js/"><img src="rs_school_js.svg" alt="RS_JS_Stage0" height=26></a>
     <a class="nav_footer" href="https://github.com/Eugen270181">&copy; 2023 - My GitHub </a>
     <a class="nav_footer" href="#top">&uArr;&uArr;</a>
   </footer>
