--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <header class="header" id="top">
     <nav class="header_navigation">
       <ul class="list_item">
-        <li class="item"><a class="nav_item" href="#contacts">Contacts </a></li>
-        <li class="item"><a class="nav_item" href="#skills">Skills </a></li>
-        <li class="item"><a class="nav_item" href="#portfolio">Portfolio </a></li>
-        <li class="item"><a class="nav_item" href="#education">Education</a></li>
+        <li class="item"><a class="nav_header" href="#contacts">Contacts </a></li>
+        <li class="item"><a class="nav_header" href="#skills">Skills </a></li>
+        <li class="item"><a class="nav_header" href="#portfolio">Portfolio </a></li>
+        <li class="item"><a class="nav_header" href="#education">Education</a></li>
       </ul>
     </nav>
     <section class="header_logo wrapper">
-      <img class="img" src="avatar.png" alt="Avatar.png">
+      <img class="img" src="assets/img/avatar.png" alt="Avatar.png">
       <h1 class="h1">Sadovnikov Eugen</h1>
     </section>
   </header>
@@ -39,7 +39,7 @@
         <li class="item">e-mail: sadeugen@gmail.com</li>
         <li class="item">Discord: Eugen#4582</li>
         <li class="item">
-          <a href="https://github.com/Eugen270181">[Github](https://github.com/Eugen270181)</a>
+          <a class="a" href="https://github.com/Eugen270181">[Github](https://github.com/Eugen270181)</a>
         </li>
       </ul>
     </section>
@@ -62,7 +62,7 @@
     </section>
     <section class="main_my_portfolio" id="portfolio">
       <h2 class="h2">Portfolio</h2>
-      <a href="https://github.com/Eugen270181">[Github](https://github.com/Eugen270181)</a>
+      <a class="a" href="https://github.com/Eugen270181">[Github](https://github.com/Eugen270181)</a>
     </section>
     <section class="main_my_education_english" id="education">
       <h2 class="h2">Education</h2>
@@ -72,7 +72,9 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="nav_footer" href="https://rs.school/js/"><img src="rs_school_js.svg" alt="RS_JS_Stage0" height=26></a>
+    <a class="nav_footer" href="https://rs.school/js/">
+      <img src="assets/img/rs_school_js.svg" alt="RS_JS_Stage0" height=26>
+    </a>
     <a class="nav_footer" href="https://github.com/Eugen270181">&copy; 2023 - My GitHub </a>
     <a class="nav_footer" href="#top">&uArr;&uArr;</a>
   </footer>
